--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <title>ねこのごはん、あげてますか</title>
 
@@ -19,7 +20,7 @@
 <body>
 <div class="container" id="app">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-xs-6">
             <h2>なつ</h2>
             <ul class="list-group">
                 <li class="list-group-item" v-for="(food, index) in foods" v-show="food.name == 'natsu'">
@@ -32,7 +33,7 @@
                 </li>
             </ul>
         </div>
-        <div class="col-md-4">
+        <div class="col-xs-6">
             <h2>うに</h2>
             <ul class="list-group">
                 <li class="list-group-item" v-for="(food, index) in foods" v-show="food.name == 'uni'">
@@ -47,10 +48,10 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-xs-6">
             <button class="btn btn-primary" type="button" v-on:click="createFood('natsu')">なつ</button>
         </div>
-        <div class="col-md-4">
+        <div class="col-xs-6">
             <button class="btn btn-primary" type="button" v-on:click="createFood('uni')">うに</button>
         </div>
     </div>
